--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /mir4-client-launcher/bin
 /mir4-client-launcher/obj
 /mir4-server-console/bin
+/Tools/mir4-client-editor/.vs
+/Tools/mir4-client-editor/Mir4ClientEditor/obj
